k8s/old/demo-fe-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-fe-ingress
  namespace: fe
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "demo-fe.192.168.56.10.sslip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo-fe-svc
                port:
                  number: 9099
